<resources>
    <string name="app_name">AdvancedCryptoIndicators2</string>
    <string name="list">LIST</string>
    <string name="fear_greed">FEAR/GREED</string>
    <string name="fear_greed_title">Fear "&amp;" greed index</string>
    <string name="fav">FAV</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="favorite_coins_title">Favorite coins</string>
    <string name="coins_list_title">Coins List</string>
    <string name="rsi_indicator_name">Bounce Indicator</string>
    <string name="arima_indicator_name">AI prediction</string>

    <string name="rsi_strength">Indicator strength: %1$s %%</string>
    <string name="possible_target">Possible target:  %1$s$ (%2$s %%)</string>
    <string name="possible_sl">Stop Loss: %1$s$ (%2$s %%)</string>
    <string name="buy_text">BUY</string>
    <string name="sell_text">SELL</string>
    <string name="prediction_text">"Prediction: %1$s $"</string>
    <string name="app_logo">app logo</string>
    <string name="help_icon">help icon</string>
    <string name="error_data_load">Couldn\'t load data</string>
    <string name="retry">retry</string>
    <string name="not_enough_data_error">Not enough data</string>
    <string name="current_prediction_period">Current prediction period: %1$d days </string>
    <string name="time_frame">Time Frame: %1$s</string>
    <string name="risk_reward">Risk Reward: %1$s </string>


    <string name="action_search">action_search</string>
    <string name="search_fragment_title">Search</string>
    <string name="now">Now</string>
    <string name="extreme_fear">Extreme Fear</string>
    <string name="fear">Fear</string>
    <string name="greed">Greed</string>
    <string name="extreme_greed">Extreme Greed</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="no_results">No results, try full coin name</string>
    <string name="no_sentiment_data">No sentiment data</string>
    <string name="sentiment">Sentiment</string>
    <string name="settings_icon">settings icon</string>
    <string name="prediction_period_label">Prediction period (days)</string>
    <string name="positive_dialog_button">Apply</string>
    <string name="negative_dialog_button">Cancel</string>
    <string name="time_frame_label">Time Frame</string>
    <string name="prediction_period">Prediction period</string>

    <string name="_7_days">7 days</string>
    <string name="_14_days">14 days</string>
    <string name="_30_days">30 days</string>
    <string name="_365_days">365 days</string>
    <string name="_Max">Max</string>


    <string name="lowRR">Low</string>
    <string name="mediumRR">Medium</string>
    <string name="highRR">High</string>
    <string name="risk_reward_label">Risk/Reward</string>
    <string name="sentiment_help_body">General public opinion on the selected cryptocurrency.
        \nProvided by <a href="http://coingecko.com">CoinGecko</a></string>
    <string name="help">Help</string>
    <string name="rsi_help_body">Indicator is based on RSI of 14 time period.
        \nBased on the selected timeframe it quite accurately detects profitable entry points.
        \nYou can manually choose risk/reward and the timeframe to observe.
        \nFor Intraday trading it is best to use 30 days timeframe</string>
    <string name="arima_help">This indicator is composed of Autoregressive Integrated Moving Average, or ARIMA.
        \nThe method can very easily handle time-series data and predict the current trend.
        \nYou can choose the timeframe and prediction period in days.</string>
    <string name="possible_strategy">Possible Strategy</string>
    <string name="help_strategy_text">While the bounce indicator is a trend-reversal indicator, ARIMA follows the trend.
        \nIf bounce indicator and ARIMA are showing the same recommendation then there is a divergence in the trend, so it\'s the best opportunity to trade</string>
    <string name="fear_greed_index">Fear &amp; greed index</string>
    <string name="fng_help_body">Each day sentiments from various sources are being crunched into one simple number representing the global market sentiment.
        \n\nFear (closer to 0) means that the market is oversold and it\'s a good opportunity to buy.
        \nGreed (closer to 100) means that the market is overbought and it\'s a good opportunity to sell.
        \nProvided by <a href="https://alternative.me/">alternative.me</a></string>
    <string name="caution">Caution</string>
    <string name="not_an_advice">This is not a financial advice, always do your own research</string>
    <string name="settings_bounce_indicator">settings bounce indicator</string>
    <string name="settings_ai_prediction_button">settings ai prediction button</string>
    <string name="image_help_strategy">image help strategy</string>
    <string name="coin_image">coin image</string>
    <string name="action_night_mode">action_night_mode</string>
    <string name="trending">TRENDING</string>
  <string name="trending_coins">Trending coins</string>

  <string-array name="time_frame">
        <item name="7_days">7 days</item>
        <item name="14_days">14 days</item>
        <item name="30_days">30 days</item>
        <item name="365_days">365 days</item>
        <item name="Max">Max</item>
    </string-array>

    <string-array name="risk_reward">
        <item name="low">Low</item>
        <item name="medium">Medium</item>
        <item name="high">High</item>
    </string-array>
</resources>