<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/app_bar"
        android:id="@+id/toolbar_include"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PrimaryCard">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/price_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CoinDetailedBlocks">
        <TextView
            android:id="@+id/price_detailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MainPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_detailed" />
        <com.sweetmay.advancedcryptoindicators2.view.custom.FavButton
            android:id="@+id/fav_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@null"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PrimaryCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sentiment_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CoinDetailedBlocks">

            <TextView
                android:id="@+id/sentiment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sentiment"
                style="@style/IndicatorTextStyle"
                android:background="@drawable/bottom_layout_border"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/no_sentiment_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/no_sentiment_data"
                app:layout_constraintTop_toBottomOf="@id/sentiment_text"
                app:layout_constraintStart_toStartOf="parent" />
            <com.sweetmay.advancedcryptoindicators2.view.custom.SentimentView
                android:id="@+id/sentiment"
                android:layout_width="match_parent"
                app:thumbUp="@drawable/thumb_up_24px"
                app:thumbDown="@drawable/thumb_down_24px"
                app:thumbSize="24dp"
                android:layout_marginTop="8dp"
                android:layout_height="64dp"
                app:layout_constraintTop_toBottomOf="@id/sentiment_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PrimaryCard">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/rsi_block"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CoinDetailedBlocks">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/rsi_indicator_name"
                style="@style/IndicatorTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rsi_indicator_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/bottom_layout_border"/>
            <TextView
                android:id="@+id/rsi_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rsi_indicator_name" />

            <TextView
                android:id="@+id/time_frame_rsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rsi_strength"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/risk_reward_rsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_frame_rsi"/>

            <TextView
                android:id="@+id/stop_loss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/risk_reward_rsi" />
            <TextView
                android:id="@+id/target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stop_loss" />

            <ImageView
                android:id="@+id/settings_rsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/rsi_indicator_name"
                app:layout_constraintStart_toEndOf="@+id/rsi_indicator_name"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/settings_24px" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:id="@+id/buy_sell_text_rsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PrimaryCard">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/CoinDetailedBlocks">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/arima_block"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <TextView
                android:id="@+id/arima_indicator_name"
                style="@style/IndicatorTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_layout_border"
                android:text="@string/arima_indicator_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/time_frame_arima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/arima_indicator_name"/>

            <TextView
                android:id="@+id/current_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_frame_arima" />

            <TextView
                android:id="@+id/prediction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/current_period" />

            <ImageView
                android:id="@+id/settings_arima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/arima_indicator_name"
                app:layout_constraintStart_toEndOf="@+id/arima_indicator_name"
                app:layout_constraintTop_toTopOf="@+id/arima_indicator_name"
                app:srcCompat="@drawable/settings_24px" />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/buy_sell_text_arima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>